--- a/.github/workflows/postman-api.yml
+++ b/.github/workflows/postman-api.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install Postman CLI
         run: |
           curl -o "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+          echo "$HOME/.postman" >> $GITHUB_PATH
 
       - name: Login to Postman
         run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
